testsuite/poke.pkl/arrays-diag-2.pk
/* { dg-do compile } */

var a = [0,1,.[-1]=10]; /* { dg-error "negative" } */
